# python-helloworld

./: .editorconfig  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.template.toml  pyproject.toml  requirements.txt  zensical.toml
.devcontainer/: devcontainer.json
.github/workflows/: docs.yml  publish.yaml  quality.yaml  secret-scan.yaml  test.yaml
docs/: getting-started.md  markdown.md
src/python_library/: __init__.py
tests/: test_example.py
